test/bad/functions/type04.px

func id(f: Int->String): Int->String def
    return id

id()
